--- a/app/src/main/res/layout/app_bar_itineraire.xml
+++ b/app/src/main/res/layout/app_bar_itineraire.xml
@@ -20,7 +20,19 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+        <include layout="@layout/content_itineraire"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".5"/>
+        <include layout="@layout/proposed_itineraire"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".5"/>
+    </LinearLayout>
 
-    <include layout="@layout/content_itineraire" />
 
 </android.support.design.widget.CoordinatorLayout>
