introducing note class

--- a/app/src/main/res/layout/activity_note_content.xml
+++ b/app/src/main/res/layout/activity_note_content.xml
@@ -48,7 +48,7 @@
             <ImageButton
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/icon-pen"
+                android:src="@drawable/icon_pen"
                 android:id="@+id/addText"/>
         </LinearLayout>
     </ListView>
