--- a/app/src/main/res/layout/content_research.xml
+++ b/app/src/main/res/layout/content_research.xml
@@ -12,17 +12,35 @@ tools:showIn="@layout/app_bar_research">
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+
         <EditText android:id="@+id/editText"
+            android:imeOptions="actionSearch"
+            android:inputType="text"
             android:layout_column="1"
             android:layout_row="2"
             android:hint="What are you looking for ?"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp" />
+            android:layout_marginRight="20dp"
+            android:layout_centerHorizontal="true"/>
 
+        <ImageButton
+            android:id="@+id/searchButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/ic_menu_send"
+            android:layout_centerVertical="true"
+            android:layout_margin="5dp"
+            android:onClick="displayResults"/>
+
+    </RelativeLayout>
 
             <LinearLayout
                 android:id="@+id/formerSearches"
