--- a/app/src/main/res/layout/content_research_result.xml
+++ b/app/src/main/res/layout/content_research_result.xml
@@ -26,6 +26,19 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp" />
 
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                >
+
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -174,6 +187,8 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@android:color/darker_gray"/>
+        </LinearLayout>
+        </ScrollView>
     </LinearLayout>
 
 </GridLayout>
