--- a/app/src/main/res/layout/app_bar_activity_uno.xml
+++ b/app/src/main/res/layout/app_bar_activity_uno.xml
@@ -7,8 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:paddingLeft="0dp"
-    tools:context=".ActivityMain"
-    tools:showIn="@layout/content_activity_uno">
+    tools:context=".ActivityMain">
 
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
