--- a/app/src/main/res/layout/content_research_result.xml
+++ b/app/src/main/res/layout/content_research_result.xml
@@ -26,12 +26,21 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp" />
 
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Restaurants"
             android:layout_marginLeft="10dp"
             android:textSize="20dp"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"/>
+        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
@@ -69,6 +78,10 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:textSize="20dp"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"/>
 
 
         <View
