--- a/app/src/main/res/layout/content_itineraire.xml
+++ b/app/src/main/res/layout/content_itineraire.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true"
-    android:paddingTop="60dp">
+
 
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -15,11 +11,9 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingTop="60dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context="com.example.simon.tripbuddy_v0.ItineraireActivity"
         tools:showIn="@layout/app_bar_itineraire"
         android:id="@+id/layoutineraire">
     </ListView>
-
-</ScrollView>
