--- a/app/src/main/res/layout/content_research_result.xml
+++ b/app/src/main/res/layout/content_research_result.xml
@@ -29,6 +29,7 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -36,16 +37,22 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Restaurants"
-            android:layout_marginLeft="10dp"
-            android:textSize="20dp"/>
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentLeft="true"
+                    android:src="@drawable/restaurant"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Restaurants"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="20dp"
+                    android:layout_alignParentRight="true"/>
+                </LinearLayout>
 
         <View
             android:layout_width="match_parent"
@@ -76,17 +83,23 @@
             android:layout_height="1dp"
             android:background="@android:color/darker_gray"/>
 
-        <TextView
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentLeft="true"
+                    android:src="@drawable/bar"/>
+                <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Bars"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:textSize="20dp"/>
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"/>
+
+                </LinearLayout>
 
 
         <View
@@ -119,6 +132,15 @@
             android:layout_height="1dp"
             android:background="@android:color/darker_gray"/>
 
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentLeft="true"
+                    android:src="@drawable/museum"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -126,6 +148,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:textSize="20dp"/>
+                </LinearLayout>
 
 
         <View
@@ -156,6 +179,14 @@
             android:layout_height="1dp"
             android:background="@android:color/darker_gray"/>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentLeft="true"
+                    android:src="@drawable/spa"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -163,7 +194,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:textSize="20dp"/>
-
+</LinearLayout>
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
