--- a/app/src/main/res/layout/activity_note_content.xml
+++ b/app/src/main/res/layout/activity_note_content.xml
@@ -35,6 +35,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:layout_alignParentBottom="true">
             <ImageButton
                 android:layout_width="60dp"
