--- a/app/src/main/res/layout/content_activity_details.xml
+++ b/app/src/main/res/layout/content_activity_details.xml
@@ -38,7 +38,8 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:minHeight="200dp"
-            android:maxHeight="200dp" />
+            android:maxHeight="200dp"
+            android:contentDescription="Illustration lieu"/>
 
 
         <TextView
