--- a/app/src/main/res/layout/content_research.xml
+++ b/app/src/main/res/layout/content_research.xml
@@ -37,7 +37,8 @@ tools:showIn="@layout/app_bar_research">
             android:layout_alignParentRight="true"
             android:src="@drawable/ic_menu_send"
             android:layout_centerVertical="true"
-            android:layout_margin="5dp" />
+            android:layout_margin="5dp"
+            android:contentDescription="Bouton rechercher"/>
 
     </RelativeLayout>
 
